kubernetes/apps/blog/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 8080
      targetPort: http
