kubernetes/apps/blog/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
  namespace: blog
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - blog.michaelmuzafarov.dev
  rules:
    - backendRefs:
        - name: blog
          port: 8080
